--- a/mstyle.css
+++ b/mstyle.css
@@ -25,6 +25,10 @@ header {
     background-position-y: 20%;
     padding-top: 5%;
     padding-bottom: 5%;
+    border-top: solid white;
+    border-bottom: solid white;
+    box-shadow: 0px 0px 2px aqua;
+
 
 }
 footer {
