--- a/mstyle.css
+++ b/mstyle.css
@@ -32,7 +32,9 @@ header {
 
 }
 footer {
-    
+    align-items: center;
+    display: flex;
+    flex-direction: row;
     position: relative;
     bottom: 0;
     font-size:70%;
@@ -64,7 +66,7 @@ b {
 
 }
 
-@media (max-width:800) {
+@media only screen and (max-width:800) {
 
 footer {
     flex-direction: column;
