i did some things

--- a/mstyle.css
+++ b/mstyle.css
@@ -8,25 +8,32 @@ body {
 
     font-family: 'Raleway', sans-serif;
     letter-spacing: 1px;
-    color: #fff;
+    color: rgb(210, 210, 210);
     text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000;
     
 
 }
 nav {
-    background: linear-gradient(90deg, #3a3a3a 0% 94%, #202020 100%);
+    background: linear-gradient(90deg, #2a2a2a 0% 94%, #303030 100%);
     height:100%;
-    width:200px;
+    width:calc(200px);
     position:fixed!important;
     z-index:1;
     font-weight: bolder;
     overflow:auto;
     box-shadow: 2px 2px 5px #000000;
 }
-section {
+main{
+    float:right;
+    width: calc(100% - 200px);
     font-weight: 700;
+}
+section {
+    padding-left: calc(50% - 200px);
+    padding-right: calc(50% - 200px);
     overflow:auto;
+    text-align: justify;
 }
 h1{
-    font-weight: 900;
+    text-align: center;
 }
