--- a/mstyle.css
+++ b/mstyle.css
@@ -10,11 +10,13 @@ body {
     letter-spacing: 1px;
     color: rgb(210, 210, 210);
     text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000;
+    
+
 }
 nav {
     background: linear-gradient(90deg, #2a2a2a 0% 94%, #303030 100%);
     height:100%;
-    width:200px;
+    width:calc(200px);
     position:fixed!important;
     z-index:1;
     font-weight: bolder;
@@ -34,13 +36,4 @@ section {
 }
 h1{
     text-align: center;
-}
-a.sidebar{
-    text-align: left;
-    display: block;
-    padding: 10px 0px 10px 25px; 
-}
-a:hover {
-    padding: auto;
-    background: linear-gradient(90deg, #4a4a4a 0% 94%, #505050 100%);;
 }
