--- a/mstyle.css
+++ b/mstyle.css
@@ -15,6 +15,7 @@ nav {
     background: linear-gradient(90deg, #2a2a2a 0% 94%, #303030 100%);
     height:100%;
     width:200px;
+    
     position:fixed!important;
     z-index:1;
     font-weight: bolder;
@@ -51,4 +52,10 @@ a:link {
 a:visited{
     color: rgb(210, 210, 210);
     text-decoration: none;
+}
+div.bottom{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 200px;
 }
