--- a/mstyle.css
+++ b/mstyle.css
@@ -33,15 +33,17 @@ section {
     overflow:auto;
     text-align: justify;
 }
-h1{
-    text-align: center;
+a.logo {
+    text-align: left;
+    display: block;
+    padding: 1px 0px 1px 25px;
 }
 a.sidebar{
     text-align: left;
     display: block;
     padding: 10px 0px 10px 25px; 
 }
-a:hover {
+a.sidebar:hover {
     padding: auto;
     background: linear-gradient(90deg, #4a4a4a 0% 94%, #505050 100%);;
 }
@@ -49,11 +51,15 @@ a:link {
     color: rgb(210, 210, 210);
     text-decoration: none;
 }
+a.main:link {
+    color: rgb(210, 210, 210);
+    text-decoration: underline;
+}
 a:visited{
     color: rgb(210, 210, 210);
     text-decoration: none;
 }
-div.bottom{
+div.sbottom{
     position: fixed;
     bottom: 0px;
     left: 0px;
