--- a/mstyle.css
+++ b/mstyle.css
@@ -74,7 +74,7 @@ div.sbottom{
     width: 100%;
     }
     section {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 2%;
+    padding-right: 2%;
     }
 }
