--- a/mstyle.css
+++ b/mstyle.css
@@ -15,6 +15,8 @@ nav {
     background: linear-gradient(90deg, #2a2a2a 0% 94%, #303030 100%);
     height:100%;
     width:200px;
+    display: flex;
+    flex-direction: column;
     
     position:fixed!important;
     z-index:1;
@@ -36,7 +38,12 @@ section {
 a.logo {
     text-align: left;
     display: block;
-    padding: 1px 0px 1px 25px;
+    padding: 20px 0px 20px 25px;
+    font-size: 24px;
+}
+a.logo:hover {
+    padding: auto;
+    background: linear-gradient(90deg, #4a4a4a 0% 94%, #505050 100%);;
 }
 a.sidebar{
     text-align: left;
@@ -68,13 +75,51 @@ div.sbottom{
 
 @media (max-width: 668px) {
     nav {
-        display: none;
+        overflow:visible!important;
+        background: linear-gradient(180deg, #2a2a2a 0% 74%, #303030 100%);
+        height:10%;
+        width:100%;
+        flex-direction: row;
+        align-items:center;
+        position:static!important;
+        z-index:1;
+        font-weight: bolder;
+        overflow:auto;
+        box-shadow: 2px 2px 5px #000000;
+        align: stretch;
+    }
+    a.sidebar:hover {
+        background: linear-gradient(180deg, #4a4a4a 0% 74%, #505050 100%);;
+    }
+    a.logo {
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        width: 25%;
+        height: 100%;
+        padding: 15px 0px 15px 0px ;
+
+    }
+    a.logo:hover {
+        background: linear-gradient(180deg, #4a4a4a 0% 74%, #505050 100%);;
+    }
+    a.sidebar{
+        text-align: center;
+        display: inline-block;
+        width: 15%;
+        height: 100%;
+        padding: 15px 0px 15px 0px;
     }
     main{
-    width: 100%;
+        float:center;
+        width: 100%;
+        
     }
     section {
     padding-left: 5%;
     padding-right: 5%;
+    }
+    div.sbottom{
+    display:none;
     }
 }
