--- a/mstyle.css
+++ b/mstyle.css
@@ -29,10 +29,9 @@ main{
     width: calc(100% - 200px);
     font-weight: 700;
 }
-section {
+p, h1, h2, ol, ul {
     padding-left: calc(50% - 200px);
     padding-right: calc(50% - 200px);
-    overflow:auto;
     text-align: justify;
 }
 a.logo1, a.logo2 {
