--- a/mstyle.css
+++ b/mstyle.css
@@ -29,7 +29,7 @@ main{
     width: calc(100% - 200px);
     font-weight: 700;
 }
-p, h1, h2, ol, ul {
+.right-side-box {
     padding-left: calc(50% - 200px);
     padding-right: calc(50% - 200px);
     text-align: justify;
